[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/LoginScene.gd" type="Script" id=1]
[ext_resource path="res://resources/ARIAL.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://baseTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0, 0.482353, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.0431373, 0.0666667, 0.415686, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_right = -8.0
custom_styles/panel = SubResource( 1 )

[node name="labelTexts" type="Node" parent="Background"]

[node name="textTitle" type="Label" parent="Background/labelTexts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 48.0
margin_right = -136.0
margin_bottom = -479.0
theme = ExtResource( 3 )
text = "QUESTIVITY"
align = 1

[node name="textUsername" type="Label" parent="Background/labelTexts"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 136.0
margin_top = 168.0
margin_right = -578.0
margin_bottom = -359.0
theme = ExtResource( 3 )
text = "Username:"

[node name="textPassword" type="Label" parent="Background/labelTexts"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 136.0
margin_top = -60.0
margin_right = 446.0
margin_bottom = 13.0
theme = ExtResource( 3 )
text = "Password:"

[node name="textfields" type="Node" parent="Background"]

[node name="textboxUsername" type="LineEdit" parent="Background/textfields"]
margin_left = 488.0
margin_top = 176.0
margin_right = 808.0
margin_bottom = 232.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
placeholder_text = "Username"

[node name="textboxPassword" type="LineEdit" parent="Background/textfields"]
margin_left = 496.0
margin_top = 248.0
margin_right = 806.0
margin_bottom = 302.0
rect_rotation = 1.53648
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Password"

[node name="buttons" type="Node" parent="Background"]

[node name="buttonLogin" type="Button" parent="Background/buttons"]
margin_left = 368.0
margin_top = 416.0
margin_right = 624.0
margin_bottom = 520.0
theme = ExtResource( 3 )
text = "Login"

[node name="buttonCreateAcc" type="Button" parent="Background/buttons"]
margin_left = 376.0
margin_top = 528.0
margin_right = 605.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 4 )
text = "Create New Account"
flat = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Background/buttons/buttonLogin" to="." method="_on_buttonLogin_pressed"]
[connection signal="pressed" from="Background/buttons/buttonCreateAcc" to="." method="_on_buttonCreateAcc_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
